--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -36,7 +36,7 @@
                 <input type="radio" name="input-type" id="js-radio-manual">
                 <input type="text" class="tzc-input" id="js-input-manual"
                     placeholder="YYYY-MM-DD --:--:-- OR 1637946000" autocomplete="off" />
-                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"><b>Tip:</b> <br> Format as YYYY-MM-DD HH:MM:SS
+                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> Format as YYYY-MM-DD HH:MM:SS
                         or a Unix Timestamp
                         (paste
                         in a message link!)</span>
@@ -48,8 +48,8 @@
                 <input type="datetime-local" class="tzc-input" id="js-input-picker"
                     pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
                     placeholder="YYYY-MM-DD --:--:-- / 1637946000 (Timestamp)">
-                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"><b>Tip:</b> <br> Use the calendar picker on
-                        the right &#8594;</span>
+                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> Use the calendar picker on
+                        the right</span>
                 </span>
             </div>
 
