--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -36,10 +36,8 @@
                 <input type="radio" name="input-type" id="js-radio-manual">
                 <input type="text" class="tzc-input" id="js-input-manual"
                     placeholder="YYYY-MM-DD --:--:-- OR 1637946000" autocomplete="off" />
-                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> Format as YYYY-MM-DD HH:MM:SS
-                        or a Unix Timestamp
-                        (paste
-                        in a message link!)</span>
+                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> This input can be used to paste a Unix
+                        Timestamp or a Date Time formatted: YYYY-MM-DD HH:MM:SS </span>
                 </span>
             </div>
 
@@ -48,8 +46,8 @@
                 <input type="datetime-local" class="tzc-input" id="js-input-picker"
                     pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
                     placeholder="YYYY-MM-DD --:--:-- / 1637946000 (Timestamp)">
-                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> Use the calendar picker on
-                        the right</span>
+                <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> The calendar picker on
+                        the right can be used to quickly set a date</span>
                 </span>
             </div>
 
