--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -47,7 +47,7 @@
                     pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
                     placeholder="YYYY-MM-DD --:--:-- / 1637946000 (Timestamp)">
                 <span class="tzc-tooltip">?<span class="tzc-tooltiptext"> The calendar picker on
-                        the right can be used to quickly set a date</span>
+                        the right can be used to quickly set a Date Time</span>
                 </span>
             </div>
 
