Updated HTML & CSS to fit page better

--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -14,8 +14,8 @@
             <select size="1" id="js-page-timezone">
                 <!-- options are automatically added on build -->
             </select>
+            <button id="js-convert-page" class="convert-button">Convert</button>
         </div>
-        <button id="js-convert-page" class="convert-button">Convert</button>
 
         <hr />
 
@@ -23,9 +23,10 @@
             <h2> Convert times manually:</h2>
         </div>
         <div>
-            <label> From Time Zone: </label>
-            <label class="point-down-emoji"> &#10549;</label>
+
+            <!-- <label class="point-down-emoji"> &#10549;</label> -->
             <div>
+                <label> From Time Zone: </label>
                 <select size="1" id="js-from-timezone">
                     <!-- options are automatically added on build -->
                 </select>
@@ -51,9 +52,9 @@
                 </span>
             </div>
 
-            <label> To Time Zone: </label>
-            <label class="point-down-emoji"> &#10549;</label>
+            <!-- <label class="point-down-emoji"> &#10549;</label> -->
             <div>
+                <label> To Time Zone: </label>
                 <select size="1" id="js-to-timeZone">
                     <!-- options are automatically added on build -->
                 </select>
