--- a/tests/mock-site/index-dev.html
+++ b/tests/mock-site/index-dev.html
@@ -22,18 +22,75 @@
 
 <body>
 	<div style="width: 400px; margin: 0 auto">
+
 		<table style="width:100%">
+			<tbody>
+				<tr>
+					<th>Date times to convert</th>
+				</tr>
+				<tr>
+					<td>test</td>
+				</tr>
+			</tbody>
 			<tr>
-				<th>Date times to convert</th>
+				<td>2021-01-01 00:00:00 UTC</td>
 			</tr>
 			<tr>
-				<td>test</td>
+				<td>2021-01-01 00:00:00 AEDT</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00 +12</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00 -12</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00 +1230</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00 -1230</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 UTC</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 AEDT</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 +12</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 -12</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 +1230</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00 -1230</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00.123 UTC</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00.123 UTC</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00.123 UTC some other data</td>
+			</tr>
+			<tr>
+				<td>2021-01-01 00:00:00 PDT 1234567891</td>
 			</tr>
 		</table>
 
+
 	</div>
 </body>
-<script src="./insertData.js"></script>
 <script src="../../dist/main.js"></script>
 
 
