--- a/tests/mock-site/index-dev.html
+++ b/tests/mock-site/index-dev.html
@@ -26,7 +26,7 @@
 		<table style="width:100%">
 			<tbody>
 				<tr>
-					<th>Date times to convert</th>
+					<th>Date times to convert:</th>
 				</tr>
 				<tr>
 					<td>test</td>
