--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -24,7 +24,6 @@
         </div>
         <div>
 
-            <!-- <label class="point-down-emoji"> &#10549;</label> -->
             <div>
                 <label> From Time Zone: </label>
                 <select size="1" id="js-from-timezone">
@@ -52,7 +51,6 @@
                 </span>
             </div>
 
-            <!-- <label class="point-down-emoji"> &#10549;</label> -->
             <div>
                 <label> To Time Zone: </label>
                 <select size="1" id="js-to-timeZone">
@@ -68,8 +66,9 @@
         <div id="js-conversion-output" class="hide-timezone-element"></div>
         <div id="js-conversion-alert" class="conversion-alert hide-timezone-element">
             <span id="js-close-alert" class="closebtn">&times;</span>
-            <p>Unfortunately only certain formats are supported (YYYY-MM-DD HH:MM:SS or Unix Timestamp).</p>
-            <p>Please use the Date & Time Picker above or paste a message link containing a Timestamp</p>
+            <div id="js-conversion-alert-inner">
+            </div>
+
         </div>
     </div>
 </timezone-converter-container>
