--- a/tests/mock-site/index-dev.html
+++ b/tests/mock-site/index-dev.html
@@ -86,6 +86,11 @@
 			<tr>
 				<td>2021-01-01 00:00:00 PDT 1234567891</td>
 			</tr>
+			<tr>
+				<td>09:13:00 AM, Jun 15 2021</td>
+			</tr>
+
+
 		</table>
 
 
