--- a/mock_site/index-dev.html
+++ b/mock_site/index-dev.html
@@ -33,7 +33,7 @@
 				</tr>
 			</tbody>
 			<tr>
-				<td>2021-01-01 00:00:00 UTC</td>
+				<td>2021-01-01 00:00:00 AEDT</td>
 			</tr>
 			<tr>
 				<td>2021-01-01 00:00:00 AEDT</td>
@@ -54,7 +54,7 @@
 				<td>2021-01-01 00:00:00</td>
 			</tr>
 			<tr>
-				<td>2021-01-01 00:00 UTC</td>
+				<td>2021-01-01 00:00 PDT</td>
 			</tr>
 			<tr>
 				<td>2021-01-01 00:00 AEDT</td>
@@ -75,13 +75,13 @@
 				<td>2021-01-01 00:00</td>
 			</tr>
 			<tr>
-				<td>2021-01-01 00:00.123 UTC</td>
+				<td>2021-01-01 08:00.123 UTC</td>
 			</tr>
 			<tr>
-				<td>2021-01-01 00:00:00.123 UTC</td>
+				<td>2021-01-01 08:00:00.123 UTC</td>
 			</tr>
 			<tr>
-				<td>2021-01-01 00:00:00.123 UTC some other data</td>
+				<td>2021-01-01 08:00:00.123 UTC some other data</td>
 			</tr>
 			<tr>
 				<td>2021-01-01 00:00:00 PDT 1234567891</td>
@@ -89,7 +89,90 @@
 			<tr>
 				<td>00:00:00 AM, Jan 01 2021</td>
 			</tr>
+			<tr>
+				<td>2021-01-01 08:00:00 UTC</td>
+			</tr> -->
+			<!-- <tr>
+				<td colspan="10">
+					<div class="alert alert_success">
+						<table style="width: 100%;">
+							<tbody>
+								<tr>
+									<td style="white-space:nowrap;">2021-01-01 08:00:00 UTC</td>
+								</tr>
+								<tr>
+									<td style="white-space:nowrap;">2021-01-01 08:00:00 UTC</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</td>
+			</tr>
+			<tbody>
 
+				<td>G016MEP4V4Z</td>
+				<td>
+					<nobr>2021-06-28 11:00:11</nobr><br>1624903211000100
+				</td>
+				<td>everything</td>
+				<td style="white-space:nowrap;"> unread </td>
+				<td style="white-space: nowrap;"> skipped-online <i class="info" data-toggle="tooltip" title=""
+						data-original-title="We didn't send a push notification because the user was online at the time."></i>
+				</td>
+				<td style="white-space: nowrap;"> never-emailed </td>
+				<td>
+					<nobr></nobr>
+				</td>
+				<td><a class="btn btn-danger"
+						href="user_mentions.php?id=1039658256208&amp;team_id=106074116967&amp;mark_one_read=1039658256208-1225499165169-1624903211000100-0-everything"
+						onclick="return window.confirm('Are you sure you want to mark this mention read?');">Mark
+						read</a></td>
+				<td>Debug info below:</td>
+				</tr>
+				<tr>
+					<td colspan="10">
+						<div class="alert alert_success">
+							<table style="width: 100%;">
+								<tbody>
+									<tr>
+										<th colspan="3" style="text-align: left;">Steps:</th>
+									</tr>
+									<tr>
+										<td style="white-space:nowrap;">2021-06-28 18:00:12.183 UTC </td>
+										<td><i class="info" data-toggle="tooltip" title=""
+												data-original-title="Function: mentions_push_check_immediate_single()"></i>push
+											job enqueued</td>
+										<td>Enqueueing for 1 user<br></td>
+									</tr>
+									<tr>
+										<td style="white-space:nowrap;">2021-06-28 18:00:12.183 UTC </td>
+										<td><i class="info" data-toggle="tooltip" title=""
+												data-original-title="Function: mentions_notifications_push_user()"></i>connectivity
+											status</td>
+										<td>Status: online<br>Idle limit: 30s<br>Active connections: 6<br>Last activity:
+											1s<br></td>
+									</tr>
+									<tr>
+										<td style="white-space:nowrap;">2021-06-28 18:00:12.183 UTC </td>
+										<td><i class="info" data-toggle="tooltip" title=""
+												data-original-title="Function: mentions_vitess_update_push_email_state()"></i>push
+											state value updated</td>
+										<td>State: user was active and online so no notification was sent 🤸‍♀️<br></td>
+									</tr>
+									<tr>
+										<td style="white-space:nowrap;">2021-06-28 18:00:12.183 UTC </td>
+										<td><i class="info" data-toggle="tooltip" title=""
+												data-original-title="Function: web_ssb_received_status"></i>Desktop
+											notification shown</td>
+										<td><br></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</td>
+				</tr>
+
+			</tbody>
 
 		</table>
 
